--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 
-<html>
+<html lang=en>
 <head>
 	
 
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Ian Ellmer's Homepage</title>
 <style type="text/css">
 	body{
 	background-color: #28272b;
