--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   
   <img src="images/ianEllmer.jpeg" width="300" height="400" alt="Photo of Ian Ellmer" class = "impactImage"/>
   <hr>
-  <p1>I am currently studying Computer Science and Statistics at Colby College, as well as Computer Science at the Roux Institute in Northeastern.  
+  <p1>I am currently studying Computer Science and Statistics at Colby College, as well as Computer Science at the Roux Institute of Northeastern.  
   I am a Colby College varsity swimmer and enjoy dragging my girlfriend on rollercoasters that she's "too scared" of.  
   I am also the self proclaimed biggest Mets fan in Maine, LFGM!</p1>
   <hr>
