--- a/index.html
+++ b/index.html
@@ -6,109 +6,7 @@
 
 <meta charset="UTF-8">
 <title>Ian Ellmer's Homepage</title>
-<style type="text/css">
-	body{
-	background-color: #28272b;
-	}
-	.wrapper {
-		width:960px;
-		margin: 0 auto 0 auto;
-		background-color: #5c8ff7;
-	}
-	
-	.imageTextPlacement{
-		display: grid;
-		grid-template-columns: 6fr 20px 6fr;
-		grid-template-rows: auto;
-		grid-template-areas: 
-			"li.rt";
-	}
-	.textImagePlacement{
-		display: grid;
-		grid-template-columns: 6fr 20px 6fr;
-		grid-template-rows: auto;
-		grid-template-areas: 
-			"lt.ri";
-	}
-	.imageImagePlacement{
-		display: grid;
-		grid-template-columns: 6fr 20px 6fr;
-		grid-template-rows: auto;
-		grid-template-areas: 
-			"li.ri";
-	}
-	.leftImage{
-		grid-area: li;
-		display: block;
-		margin: auto auto auto auto;
-	}
-	.rightImage{
-		grid-area: ri;
-		display: block;
-		margin: auto auto auto auto;
-	}
-	.impactImage{
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	.leftText{
-		grid-area: lt;
-		display: block;
-		margin: auto auto auto auto;
-	}
-	.rightText{
-		grid-area: rt;
-		display: block;
-		margin: auto auto auto auto;
-	}
-	.RetouchImage {
-        width: 300px;
-        height: auto;
-        position: relative;
-        display: block;
-		margin-left: auto;
-		margin-right: auto;
-    }
-    .RetouchImage .img-top {
-        display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 99;
-    }
-    .RetouchImage:hover .img-top {
-        display: inline;
-    }
-	
-	nav {
-		margin: 0 auto 0 auto;
-	}
-	
-	nav ul{
-		text-align: center;
-	}
-	
-	nav ul li{
-		display: inline-block;
-		margin-right: 20px;
-	}
-	
-	hr{
-		width: 75%;
-		height:5px;
-		border-width:0;
-		color:gray;
-		background-color:gray
-	}
-	h1{
-		text-align: center;	
-	}
-	h2{
-		text-align: center;
-	}
-
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -116,14 +14,12 @@
 	
 	<img src="images/banner.jpeg" width="960" height="150" alt="Header Image" />
   
-  <!--<nav>
+  <nav>
     <ul>
       <li>Home</li>
-      <a href="#Photoshop" target="new"><li>Photoshop</li></a>
-      <a href="#Illustrator" target="new"><li>Illustrator</li></a>
-      <a href="#InDesign" target="new"><li>InDesign</li></a>
+      <a href="cs7290.html" target="new"><li>CS7290</li></a>
       </ul>
-  </nav>--!>
+  </nav>
   
   
   <h1>Welcome to Ian Ellmer's Github Page!</h1>
@@ -132,7 +28,7 @@
   
   <img src="images/ianEllmer.jpeg" width="300" height="400" alt="Photo of Ian Ellmer" class = "impactImage"/>
   <hr>
-  <p1>I am currently studying Computer Science and Statistics at Colby College, as well as Computer Science at the Roux Institute of Northeastern.  
+  <p1>I am currently studying Computer Science and Statistics at Colby College, as well as Computer Science at the Roux Institute in Northeastern.  
   I am a Colby College varsity swimmer and enjoy dragging my girlfriend on rollercoasters that she's "too scared" of.  
   I am also the self proclaimed biggest Mets fan in Maine, LFGM!</p1>
   <hr>
