--- a/cs7290.html
+++ b/cs7290.html
@@ -15,7 +15,7 @@
   
   <nav>
     <ul>
-      <a href="index.html" target="new"><li>Home</li></a>
+      <a href="index.html"><li>Home</li></a>
       <li>CS7290</li>
       </ul>
   </nav>
@@ -23,12 +23,12 @@
   
   <h1>Here is my work in CS7290</h1>
   <hr>
-  
+  <p>Click on a link to be taken to the page with the submission for that homework assignment.</p>
+  <hr>
   <ul>
-  	<a href = "cs7290/homework2.html" target = "new"><li>Homework 2</li></a>
+  	<a href = "cs7290/homework2.html"><li>Homework 2</li></a>
   </ul>
   <hr>
-  
 </div>
 
 
