--- a/cs7290/homework2.html
+++ b/cs7290/homework2.html
@@ -14,8 +14,8 @@
 	<img src="../images/banner.jpeg" width="960" height="150" alt="Header Image" />
 	<nav>
     <ul>
-      <a href="../index.html" target="new"><li>Home</li></a>
-      <a href="../cs7290.html" target="new"><li>CS7290</li></a>
+      <a href="../index.html"><li>Home</li></a>
+      <a href="../cs7290.html"><li>CS7290</li></a>
       </ul>
   </nav>
 	<h1>Homework 2</h1>
