--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav>
     <ul>
       <li>Home</li>
-      <a href="cs7290.html" target="new"><li>CS7290</li></a>
+      <a href="cs7290.html"><li>CS7290</li></a>
       </ul>
   </nav>
   
