--- a/cs7290.html
+++ b/cs7290.html
@@ -27,6 +27,7 @@
   <hr>
   <ul>
   	<a href = "cs7290/homework2.html"><li>Homework 2</li></a>
+  	<a href = "cs7290/homework3.html"><li>Homework 3</li></a>
   </ul>
   <hr>
 </div>
