--- a/cs7290.html
+++ b/cs7290.html
@@ -28,6 +28,7 @@
   <ul>
   	<a href = "cs7290/homework2.html"><li>Homework 2</li></a>
   	<a href = "cs7290/homework3.html"><li>Homework 3</li></a>
+  	<a href = "cs7290/homework4.html"><li>Homework 4</li></a>
   </ul>
   <hr>
 </div>
