--- a/cs7290.html
+++ b/cs7290.html
@@ -12,11 +12,12 @@
 <body>
 <div class="wrapper">
 	
-  
+ <img src="images/banner.jpeg" width="960" height="150" alt="Header Image" /> 
   <nav>
     <ul>
       <a href="index.html"><li>Home</li></a>
       <li>CS7290</li>
+      <a href="portfolio/homepage.html"><li>My Portfolio</li></a>
       </ul>
   </nav>
   
