--- a/cs7290/homework2.html
+++ b/cs7290/homework2.html
@@ -16,6 +16,7 @@
     <ul>
       <a href="../index.html"><li>Home</li></a>
       <a href="../cs7290.html"><li>CS7290</li></a>
+      <a href="../portfolio/homepage.html"><li>My Portfolio</li></a>
       </ul>
   </nav>
 	<h1>Homework 2</h1>
