--- a/cs7290/homework3.html
+++ b/cs7290/homework3.html
@@ -16,6 +16,7 @@
     <ul>
       <a href="../index.html"><li>Home</li></a>
       <a href="../cs7290.html"><li>CS7290</li></a>
+      <a href="../portfolio/homepage.html"><li>My Portfolio</li></a>
       </ul>
   </nav>
 	<h1>Homework 3</h1>
@@ -25,6 +26,7 @@
   <p>The goal of this homework assignment was to create an animation of a circle bouncing 
   off of the walls of a box. This was done using Observable Notebooks and the third method from 
   Mike Bostock's Observable Notebook entitled "Animation Loops".</p>
+  <br>
 </div>
 	
 </body>
