--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <ul>
       <li>Home</li>
       <a href="cs7290.html"><li>CS7290</li></a>
+      <a href="portfolio/homepage.html"><li>My Portfolio</li></a>
       </ul>
   </nav>
   
