--- a/portfolio/homepage.html
+++ b/portfolio/homepage.html
@@ -5,8 +5,9 @@
 	
 
 <meta charset="UTF-8">
-<title>Ian Ellmer's CS7290 Homework 4</title>
+<title>Ian Ellmer's Portfolio</title>
 <link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 </head>
 
 <body>
@@ -16,15 +17,14 @@
     <ul>
       <a href="../index.html"><li>Home</li></a>
       <a href="../cs7290.html"><li>CS7290</li></a>
-      <a href="../portfolio/homepage.html"><li>My Portfolio</li></a>
+      <li>My Portfolio</li>
       </ul>
   </nav>
-	<h1>Homework 4</h1>
+	<h1>Stinky Data</h1>
 	<hr>
-	<iframe width="100%" height="500" frameborder="0"
+<iframe width="100%" height="500" frameborder="0"
   src="https://observablehq.com/embed/716ebb0a89d3e4df?cell=*"></iframe>
-  <br>
-</div>
+
 	
 </body>
 </html>
